# chatbot-sandbox

./: .gitignore  AGENTS.md  CHANGELOG.md  HANDOVER.md  HANDOVER_AGENTIC.md  PRIVACY.md  README.md  TODO.md  idea.txt  pyproject.toml
.github/workflows/: ci.yml
e2e-test/: agent-backends.yaml  agent-prompts.yaml  agent-smoke.py  backends.yaml  prompt-benchmark.py  prompts.yaml  replay-backends.yaml  report-q3-2026.md  report.md  schemas.json
examples/: backends.yaml  prompts.yaml
src/chatbot_sandbox/: __init__.py  __main__.py  cli.py  compare.py  config.py  dashboard.py  db.py  export.py  graders.py  runner.py  secrets.py
src/chatbot_sandbox/agent/: __init__.py  communication_tools.py  driver.py  filesystem_tools.py  graders.py  judges.py  sandbox.py  sentinel.py  shell_tool.py  state.py  tools_base.py
src/chatbot_sandbox/backends/: __init__.py  anthropic_backend.py  base.py  claude_cli.py  codex_cli.py  command.py  ollama.py  openai_backend.py  registry.py
src/chatbot_sandbox/dashboard/static/: app.css  app.js
src/chatbot_sandbox/dashboard/templates/: _diff.html  _result.html  _results.html  _run_note.html  agent_run_detail.html  agent_run_list.html  base.html  compare.html  index.html  leaderboard.html  run.html  run_new.html  scorecard.html  search.html  tag_index.html
src/chatbot_sandbox/migrations/: 0001_init.sql  0002_prompts_json.sql  0003_validation.sql  0004_agent_runs.sql  0005_reproducibility.sql
tests/: test_agent_driver.py  test_agent_graders.py  test_agent_judges.py  test_agent_sandbox.py  test_agent_sentinel.py  test_agent_tools.py  test_backends_http.py  test_cli.py  test_cli_agent.py  test_cli_leaderboard.py  test_config.py  test_dashboard.py  test_db.py  test_db_agent_runs.py  test_graders.py  test_runner.py  test_secrets.py
tests/fixtures/repo-bug-1/: README.md  pyproject.toml  word_tools.py
tests/fixtures/repo-bug-1/tests/: test_word_tools.py
tests/fixtures/repo-comms/: README.md  STATUS.md  pyproject.toml
tests/fixtures/repo-config-pattern/: README.md  config.py  pyproject.toml
tests/fixtures/repo-config-pattern/tests/: test_config.py
tests/fixtures/repo-exports/: README.md  exporters.py  pyproject.toml
tests/fixtures/repo-exports/tests/: test_exporters.py
tests/fixtures/repo-legacy-vs-new/: README.md  legacy_adapter.py  new_adapter.py  pyproject.toml
tests/fixtures/repo-legacy-vs-new/tests/: test_adapters.py
tests/fixtures/repo-missing-deps/: README.md  pyproject.toml  stats.py
tests/fixtures/repo-missing-deps/tests/: test_stats.py
tests/fixtures/repo-multi-layer/: README.md  app.py  index.html  pyproject.toml
tests/fixtures/repo-multi-layer/tests/: test_app.py
tests/fixtures/repo-regression-risk/: README.md  perks.py  pyproject.toml  rewards.py  summary.py  users.py
tests/fixtures/repo-regression-risk/tests/: test_callers.py  test_users.py
