[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatbot-sandbox"
version = "0.2.0"
description = "CLI tool for benchmarking prompts across different LLM backends"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["llm", "benchmark", "prompts", "ollama", "openai", "anthropic"]
authors = [
    { name = "Chatbot Sandbox Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "openai>=1.40",
    "anthropic>=0.34",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
]

[project.urls]
Homepage = "https://github.com/example/chatbot-sandbox"
Repository = "https://github.com/example/chatbot-sandbox"
Issues = "https://github.com/example/chatbot-sandbox/issues"
Changelog = "https://github.com/example/chatbot-sandbox/blob/main/CHANGELOG.md"

[project.scripts]
cbs = "chatbot_sandbox.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21.1",
    "httpx>=0.28.1",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot_sandbox"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008", "F821"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/chatbot_sandbox"]

[[tool.mypy.overrides]]
module = ["openai", "anthropic"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Don't try to collect tests from fixture repos that happen to live under
# tests/fixtures/. They look like test modules and break collection.
norecursedirs = ["tests/fixtures", "tests/fixtures/*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
    "ignore::DeprecationWarning:starlette.testclient",
]
